# PGTB3

./: CMakeLists.txt  README.md
dependencies/SDL2/: Makefile  Makefile.rules  config.status  libtool
dependencies/SDL2_image/: Makefile  config.status  libtool  showimage
dependencies/SDL2_image/.deps/: IMG.Plo  IMG_bmp.Plo  IMG_gif.Plo  IMG_jpg.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_pnm.Plo  IMG_svg.Plo  IMG_tga.Plo  IMG_tif.Plo  IMG_webp.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo  showimage.Po
dependencies/SDL2_image/.libs/: libSDL2_image-2.0.so.0.2.3  showimage
dependencies/SDL2_ttf/: Makefile  config.status  glfont  libSDL2_ttf.la  libtool  showfont
dependencies/SDL2_ttf/.deps/: SDL_ttf.Plo  glfont.Po  showfont.Po
dependencies/SDL2_ttf/.libs/: glfont  libSDL2_ttf-2.0.so.0.14.1  libSDL2_ttf.lai  showfont
dependencies/freetype-2.11.0/builds/unix/: config.status  freetype-config  freetype2.pc  libtool
dependencies/freetype-2.11.0/objs/: apinames  autofit.lo  bdf.lo  cff.lo  dlg.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftexport.sym  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sdf.lo  sfnt.lo  smooth.lo  (+5 more)
dependencies/freetype-2.11.0/objs/.libs/: libfreetype.lai  libfreetype.ver
doc/: README.md
src/: main  main.c
src/game_logic/: game_logic.c  game_logic.h
src/include/: common.h
src/ui/: ui.c  ui.h
src/utils/: utils.c  utils.h
